test/programs/error-comment-never-ends.defs
/* this comment never ends...

it just

        keeps





                going




                            on!